# N.market

./: .replit  LICENSE  pyproject.toml  test.json
n_market_back/: parse.py  server.py  test.json  test.py
n_market_front/: README.md  pubspec.yaml
n_market_front/android/app/: build.gradle
n_market_front/android/app/src/debug/: AndroidManifest.xml
n_market_front/android/app/src/main/: AndroidManifest.xml
n_market_front/android/app/src/main/kotlin/com/example/n_market_front/: MainActivity.kt
n_market_front/ios/Runner/: Info.plist
n_market_front/ios/Runner.xcodeproj/: project.pbxproj
n_market_front/lib/: global.dart  home.dart  main.dart
n_market_front/lib/Pages/: basketPage.dart  mainPage.dart  products.dart  searchPage.dart
n_market_front/lib/widgets/: product.dart
n_market_front/linux/: CMakeLists.txt  my_application.cc
n_market_front/macos/Runner.xcodeproj/: project.pbxproj
n_market_front/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
n_market_front/macos/Runner/Configs/: AppInfo.xcconfig
n_market_front/test/: widget_test.dart
n_market_front/web/: index.html  manifest.json
n_market_front/windows/: CMakeLists.txt
n_market_front/windows/runner/: Runner.rc  main.cpp
