[tool.poetry]
name = "repl_nix_Nmarket"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
fastapi = "^0.88.0"
requests = "^2.28.1"
uvicorn = "^0.20.0"
replit = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
